--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
-<!-- CSS Bootstrap -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-
-<!-- JavaScript Bootstrap (requiert Popper.js) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">MyToDoList</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
@@ -16,12 +12,15 @@
         <a class="nav-link" href="/users">Users</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/user-add">Add Users</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#">Tasks</a>
       </li>
     </ul>
   </div>
 </nav>
 
-
-<!-- The routed views render in the <router-outlet>-->
-  <router-outlet></router-outlet>
+<!-- The routed views render in the <router-outlet> -->
+<router-outlet></router-outlet>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
