--- a/src/app/update-user/update-user.component.html
+++ b/src/app/update-user/update-user.component.html
@@ -1,1 +1,15 @@
-<p>update-user works!</p>
+<form [formGroup]="userForm" (ngSubmit)="updateUser()">
+    <label>Nom :</label>
+    <input type="text" formControlName="nom">
+    <br>
+    <label>Prenom :</label>
+    <input type="text" formControlName="prenom">
+    <br>
+    <label>Role :</label>
+    <input type="role" formControlName="role">
+    <br>
+    <label>Adresse email :</label>
+    <input type="email" formControlName="email">
+    <br>
+    <button type="submit">Mettre à jour</button>
+  </form>
