--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -19,7 +19,7 @@
         <td>{{user.role}}</td>
         <td>
             <!-- Bouton de modification de l'employé -->
-            <button class="btn-modify" [routerLink]="['/user-modif', user.id]">Modifier</button>
+            <button class="btn-modify" [routerLink]="['/user-update', user.id]">Modifier</button>
           </td>
           <td>
             <!-- Bouton de Suppression de l'employé -->
