--- a/src/app/update-user/update-user.component.html
+++ b/src/app/update-user/update-user.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="userForm" (ngSubmit)="updateUser()">
+<form [formGroup]="userForm" (ngSubmit)="UpdateUser()">
     <label>Nom :</label>
     <input type="text" formControlName="nom">
     <br>
