--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -27,3 +27,7 @@
     </tr>
   </tbody>
 </table>
+<!-- Bouton d'ajout d'utilisateur -->
+<div class="add-button-container">
+  <button class="add-button" [routerLink]="['/user-add']">Ajouter un utilisateur</button>
+</div>
