--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,42 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+<head>
+  <!-- ... Autres balises ... -->
+  
+  <!-- CSS de Bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+
+  <!-- JavaScript de Bootstrap (facultatif, mais nécessaire pour les fonctionnalités avancées) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</head>
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">MyToDoList</a>
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/users">Users</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Tasks</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/"><span>MyToDoList</span></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link text-uppercase" routerLink="/users" routerLinkActive="active" *ngIf="isLoggedIn() && isAdmin()">Users</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-uppercase" routerLink="/taches" routerLinkActive="active" *ngIf="isLoggedIn()">Tasks</a>
+        </li>        
+      </ul>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a *ngIf="!isLoggedIn()" class="nav-link btn btn-primary text-uppercase" routerLink="/connexion" routerLinkActive="active">Login</a>
+        </li>
+        <li class="nav-item">
+          <a *ngIf="isLoggedIn()" class="nav-link logout" href="#" (click)="logout()">Logout</a>
+        </li>
+        <li class="nav-item">
+          <a *ngIf="!isLoggedIn()" class="nav-link btn btn-primary text-uppercase" routerLink="/user-add" routerLinkActive="active">S'inscrire</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-<!-- The routed views render in the <router-outlet> -->
-<router-outlet></router-outlet>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <router-outlet></router-outlet>
+</body>
