--- a/src/app/user-add/user-add.component.html
+++ b/src/app/user-add/user-add.component.html
@@ -8,11 +8,11 @@
     <input type="text" [(ngModel)]="newUser.prenom" name="prenom" id="prenom" class="form-control">
   </div>
   <div class="form-group">
-    <label for="role">Rôle:</label>
-    <select [(ngModel)]="newUser.role" name="role" id="role" class="form-control">
-      <option value="admin">Administrateur</option>
-      <option value="utilisateur" selected>Utilisateur</option>
-    </select>
+<select name="role" id="role" class="form-control" disabled>
+  <option value="admin">Administrateur</option>
+  <option value="utilisateur" selected>Utilisateur</option>
+</select>
+
   </div>
   <div class="form-group">
     <label for="email">Email:</label>
