--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,12 +1,12 @@
 <table class="table">
   <thead class="thead-dark">
     <tr>
-      <th>id</th>
-      <th>nom</th>
-      <th>prenom</th>
-      <th>email</th>
-      <th>role</th>
-      <th>actions</th>
+      <th>ID</th>
+      <th>NOM</th>
+      <th>PRENOM</th>
+      <th>MAIL</th>
+      <th>ROLE</th>
+      <th>ACTIONS</th>
     </tr>
   </thead>
   <tbody>
