--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
           <a class="nav-link text-uppercase" routerLink="/users" routerLinkActive="active" *ngIf="isLoggedIn() && isAdmin()">Users</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-uppercase" routerLink="/taches" routerLinkActive="active" *ngIf="isLoggedIn()">Tasks</a>
+          <a class="nav-link text-uppercase" routerLink="/task" routerLinkActive="active" *ngIf="isLoggedIn()">Tasks</a>
         </li>        
       </ul>
       <ul class="navbar-nav ms-auto">
