--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -7,7 +7,7 @@
         Ce projet est une application web développée avec Angular et JSON Server. MyToDoList vous permet de créer, organiser, mettre à jour et supprimer facilement vos tâches. Que vous soyez un étudiant, un professionnel ou simplement quelqu'un cherchant à mieux s'organiser, MyToDoList est l'outil idéal. Avec son interface conviviale et ses fonctionnalités de gestion complètes, MyToDoList vous accompagne dans la réalisation de vos tâches quotidiennes.
       </p>
       <p>
-        Ce projet est réalisé par Daniel Lévy et Léa Cohen. Profitez de MyToDoList pour simplifier votre gestion de tâches au quotidien !
+        Ce projet est réalisé par Léa Cohen. Profitez de MyToDoList pour simplifier votre gestion de tâches au quotidien !
       </p>
     </div>
   </div>
