--- a/src/app/tasklist/tasklist.component.html
+++ b/src/app/tasklist/tasklist.component.html
@@ -1,4 +1,4 @@
-<div class="task-list">
+<!--<div class="task-list">
     <div class="card" *ngFor="let task of user.taches">
       <div class="card-body">
         <h5 class="card-title">{{ task.nom }}</h5>
@@ -7,4 +7,4 @@
       </div>
     </div>
   </div>
-  
+--> 
