--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
   <!-- ... Autres balises ... -->
   
@@ -8,7 +11,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/"><span>MyToDoList</span></a>
@@ -18,21 +20,21 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link text-uppercase" routerLink="/users" routerLinkActive="active" *ngIf="isLoggedIn() && isAdmin()">Users</a>
+          <a class="nav-link text-uppercase" routerLink="/users" routerLinkActive="active" *ngIf="(isLoggedIn$ | async) && (isAdmin$ | async)">Users</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-uppercase" routerLink="/task" routerLinkActive="active" *ngIf="isLoggedIn()">Tasks</a>
+          <a class="nav-link text-uppercase" routerLink="/task" routerLinkActive="active" *ngIf="isLoggedIn$ | async">Tasks</a>
         </li>        
       </ul>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a *ngIf="!isLoggedIn()" class="nav-link btn btn-primary text-uppercase" routerLink="/connexion" routerLinkActive="active">Login</a>
+          <a *ngIf="!(isLoggedIn$ | async)" class="nav-link btn btn-primary text-uppercase" routerLink="/connexion" routerLinkActive="active">Login</a>
         </li>
         <li class="nav-item">
-          <a *ngIf="isLoggedIn()" class="nav-link logout" href="#" (click)="logout()">Logout</a>
+          <a *ngIf="(isLoggedIn$ | async)" class="nav-link logout" href="#" (click)="logout()">Logout</a>
         </li>
         <li class="nav-item">
-          <a *ngIf="!isLoggedIn()" class="nav-link btn btn-primary text-uppercase" routerLink="/user-add" routerLinkActive="active">S'inscrire</a>
+          <a *ngIf="!(isLoggedIn$ | async)" class="nav-link btn btn-primary text-uppercase" routerLink="/user-add" routerLinkActive="active">S'inscrire</a>
         </li>
       </ul>
     </div>
@@ -40,3 +42,5 @@
 
   <router-outlet></router-outlet>
 </body>
+
+</html>
