--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 <head>
   <!-- ... Autres balises ... -->
   
+
   <!-- CSS de Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
@@ -12,7 +13,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/"><span>MyToDoList</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -28,13 +29,13 @@
       </ul>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a *ngIf="!(isLoggedIn$ | async)" class="nav-link btn btn-primary text-uppercase" routerLink="/connexion" routerLinkActive="active">Login</a>
+          <a *ngIf="!(isLoggedIn$ | async)" class="nav-link btn btn-primary btn-sm text-uppercase" routerLink="/connexion" routerLinkActive="active">Login</a>
         </li>
         <li class="nav-item">
-          <a *ngIf="(isLoggedIn$ | async)" class="nav-link logout" href="#" (click)="logout()">Logout</a>
+          <a *ngIf="(isLoggedIn$ | async)" class="nav-link logout btn btn-danger btn-sm text-uppercase" href="#" (click)="logout()">Logout</a>
         </li>
         <li class="nav-item">
-          <a *ngIf="!(isLoggedIn$ | async)" class="nav-link btn btn-primary text-uppercase" routerLink="/user-add" routerLinkActive="active">S'inscrire</a>
+          <a *ngIf="!(isLoggedIn$ | async)" class="nav-link btn btn-primary btn-sm text-uppercase" routerLink="/user-add" routerLinkActive="active">S'inscrire</a>
         </li>
       </ul>
     </div>
