--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,19 +1,21 @@
-<h2>Connexion</h2>
+<div class="login-container">
+  <h2>Connexion</h2>
 
-<div *ngIf="error" class="error-message">
-  {{ error }}
-</div>
-
-<div class="login-form">
-  <div>
-    <label for="username">Email :</label>
-    <input type="text" id="username" [(ngModel)]="username" required>
+  <div *ngIf="error" class="error-message">
+    {{ error }}
   </div>
 
-  <div>
-    <label for="password">Mot de passe :</label>
-    <input type="password" id="password" [(ngModel)]="password" required>
-  </div>
+  <div class="login-form">
+    <div class="form-group">
+      <label for="username">Email :</label>
+      <input type="text" id="username" [(ngModel)]="username" required>
+    </div>
 
-  <button (click)="login()">Se connecter</button>
+    <div class="form-group">
+      <label for="password">Mot de passe :</label>
+      <input type="password" id="password" [(ngModel)]="password" required>
+    </div>
+
+    <button class="btn-login" (click)="login()">Se connecter</button>
+  </div>
 </div>
