--- a/src/app/update-user/update-user.component.html
+++ b/src/app/update-user/update-user.component.html
@@ -1,17 +1,21 @@
 <div class="user-update-form">
   <form [formGroup]="userForm" (ngSubmit)="UpdateUser()">
-    <label>Nom :</label>
-    <input type="text" formControlName="nom">
-    <br>
-    <label>Prenom :</label>
-    <input type="text" formControlName="prenom">
-    <br>
-    <label>Role :</label>
-    <input type="text" formControlName="role">
-    <br>
-    <label>Adresse email :</label>
-    <input type="email" formControlName="email">
-    <br>
-    <button type="submit">Mettre à jour</button>
+    <div class="form-group">
+      <label for="nom">Nom :</label>
+      <input type="text" id="nom" formControlName="nom" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="prenom">Prenom :</label>
+      <input type="text" id="prenom" formControlName="prenom" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="role">Role :</label>
+      <input type="text" id="role" formControlName="role" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="email">Adresse email :</label>
+      <input type="email" id="email" formControlName="email" class="form-control">
+    </div>
+    <button type="submit" class="btn btn-primary">Mettre à jour</button>
   </form>
 </div>
